<resources>
    <string name="app_name"> SES </string>
    <string name="form"> Start Interview </string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="formB"> B </string>
    <string name="formC"> C </string>
    <string name="formD1"> D1 </string>
    <string name="formD2"> D2 </string>
    <string name="formE"> E </string>
    <string name="formF"> F </string>
    <string name="openScreening"> Screening </string>
    <string name="openPretest"> Pre Test Knowlegde </string>
    <string name="sectionagisidentification_mainheading">Section A: GIS identification: Section A: GIS identification</string>
    <string name="btnSync">Download Data</string>
    <string name="btnUpload">Upload Data</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="splashText"> </string>
    <string name="splashText2">  </string>
    <string name="check_pending_forms">CHECK PENDING FORMS</string>
    <string name="open_new_form">OPEN NEW FORM</string>
    <string name="records_summary">Records Summary</string>
    <string name="main_menu">Main Menu</string>
    <string name="only_for_testing">ONLY FOR TESTING</string>
    <string name="database">Database</string>
    <string name="no"> No </string>
    <string name="dkn"> Don’t Know </string>
    <string name="none"> No one </string>
    <string name="never"> Never</string>
    <string name="na"> Applicable /Not Available  </string>
    <string name="nap"> Not Applicable </string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="nav">Not Available </string>
    <string name="ref"> Refused </string>
    <string name="other"> Other </string>
    <string name="specify"> Please explain </string>
    <string name="year"> Year </string>
    <string name="month"> Month </string>
    <string name="weeks"> Week </string>
    <string name="days"> Day </string>
    <string name="hours"> Hour </string>
    <string name="minutes"> Minutes </string>
    <string name="kg"> Kilograms </string>
    <string name="km"> Kilometers </string>
    <string name="cm"> cm </string>
    <string name="in"> Inch </string>
    <string name="rupees">  Rupees </string>
    <string name="num"> Number </string>
    <string name="name"> Name </string>
    <string name="contactnum">Contact Number </string>
    <string name="checkHHpresent"> The name of head of the household corresponds to the line listing data.</string>
    <string name="newHHheadname"> Name of new head of the household </string>
    <string name="A_title1">Overview  The term ‘School environment’ means anything that is in school’s surroundings that might influence what food or drinks students decide to take. Factors that affect school environments can include what places are available to buy food and drinks; what foods or drinks student is able to buy; student’s knowledge of nutrition; and underlying factors, like political and cultural norms, which can indirectly influence decision-making about what someone eats and drinks. Overall, these different factors can have an effect student’s nutritional status (e.g., whether they are underweight, normal weight, or overweight).   To better understand the school environment, researchers will often examine school food environments within a certain area. For this study, we will use a questionnaire that looks at main dimensions of the food environment:  1.	food accessibility: how many places are around the school, where student can buy food within a certain area, and how far away they are from a central point 2.	food availability: what types of foods and drinks can be purchased within a certain area 3.	food promotion: what advertisements exist in public spaces that promote different foods and drinks within a certain area   We are interested in the school food environment and we particularly want to know about the places around the school, where food and drinks can be obtained and what is available close to schools. To measure accessibility, we will look at density (i.e. the number of retailers within a pre-determined zone). To measure availability, we will look at the availability and types of certain food and beverage products offered at different food retailer (e.g. healthy food options vs. unhealthy food options at sit-down restaurants). To measure promotion, we will look at the advertising and branding of specific food and drinks aroud the school. All of these measures will be determined within a specific distance from a central point of school.  Definitions of Food Environment Terms:  Term	Definition Food outlet	A food outlet includes all types of places where someone can buy foods and drinks. These can include corner/convenience stores, fast-food outlets, wet markets, mobile/street/kiosk vendors, and restaurants. Corner/Convenience store	A corner or convenience store is a small store that sells some staple foods and a limited range of household goods.  Fast-food outlet 	A fast food outlet is usually a food retail shop with a limited menu that offers precooked or quickly prepared foods. In these sorts of shops, patrons generally order or select items and pay before eating. Food and drink may be consumed on premises, taken out, or delivered to customers" location (Example: KFC, Pizza Hut).  Wet market	A wet market is a large outdoor, “open-air” market, where individual vendors might sell fresh fruits and vegetables, as well as meat, fish and grains. Wet markets are not always open every day of the week, and can often happen on weekends.  Mobile food/street/kiosk vendor	A mobile food vendor, street vendor, or kiosk is usually run out of a motorized vehicles or non-motorized cart. These sorts of establishments primarily engaged in preparing and serving meals and snacks for immediate consumption, like a specialty snack, such as pakoras, bbq, bun kebobs, or crisps; or serving non-alcoholic beverages, such as coffee, juices, or sodas. Consumption of the food or drink would usually happen at the vendor’s spot or nearby.  Restaurant	Restaurants are a type of food outlet where people pay to sit and eat a meal that has been cooked on the premises and served to them (i.e. restaurants and cafes). Patrons will usually order food while seated from a server and pay after eating. Sometimes restaurants may provide take away service. Specialized 	Specalized food outlets where a certain type of food is sold (i.e. meat/chicken shop, fish shop, tea stall).   Section 2: Identifying the village centre, catchment area, and how to move through the village  The zone within the catchment area(an area of 500 radial metres from the centre of school) should be assess to the best extent possible to capture the complete school food environment. This means that all streets around school should be surveyed to identify and record any food outlets or food promotion materials for school environment survey.   To feasibly complete this survey, a maximum limit has been set for different food vendors around schools should be assessed.   Section 3: Questionnaire completion procedure  All questions within the school environment questionnaire should be completed for each school to the best extent possible. In some schools, more data may be collected than in other villages. This is normal, and will likely reflect the size of the school (i.e. bigger schools will likely have more data to collect). </string>
    <string name="A1">Latitude (Example: 24.861462)</string>
    <string name="A2">Longitude (Example:67.009939)</string>
    <string name="sectionbdemographicinformation_mainheading">Section B: Demo Graphic Information: The school food environment should be surveyed last. The indepth school food environment scan questions are questions B1F8. A maximum of 2 schools (of any type – public or private) should be surveyed. If a madrasa is present. </string>
    <string name="sbh">Section B: Demographic Information</string>
    <string name="Q_B1">B1</string>
    <string name="Q_B2">B2</string>
    <string name="Q_B3">B3</string>
    <string name="Q_B4">B4</string>
    <string name="Q_B5">B5</string>
    <string name="Q_B51">B51</string>
    <string name="Q_B52">B52</string>
    <string name="Q_B6">B6</string>
    <string name="Q_B7">B7</string>
    <string name="Q_B8">B8</string>
    <string name="Q_B9">B9</string>
    <string name="Q_B10">B10</string>
    <string name="Q_B11">B11</string>
    <string name="Q_B12">B12</string>
    <string name="Q_B13">B13</string>
    <string name="Q_B14">B14</string>
    <string name="Q_B15">B15</string>
    <string name="Q_B16">B16</string>
    <string name="Q_B17">B17</string>
    <string name="Q_B18">B18</string>
    <string name="Q_B19">B19</string>
    <string name="Q_B20">B20</string>
    <string name="Q_B21">B21</string>
    <string name="Q_B22">B22</string>
    <string name="Q_B23">B23</string>
    <string name="Q_B24">B24</string>
    <string name="Q_B25">B25</string>
    <string name="Q_B26">B26</string>
    <string name="Q_B27">B27</string>
    <string name="Q_B28">B28</string>
    <string name="Q_B29">B29</string>
    <string name="Q_B30">B30</string>
    <string name="Q_B31">B31</string>
    <string name="Q_B32">B32</string>
    <string name="Q_B33">B33</string>
    <string name="Q_B34">B34</string>
    <string name="Q_B35">B35</string>
    <string name="Q_B36">B36</string>
    <string name="Q_B37">B37</string>
    <string name="Q_B38">B38</string>
    <string name="Q_B39">B39</string>
    <string name="Q_B40">B40</string>
    <string name="Q_B41">B41</string>
    <string name="Q_B42">B42</string>
    <string name="Q_B43">B43</string>
    <string name="Q_B44">B44</string>
    <string name="Q_B45">B45</string>
    <string name="B1">Enumerator ID:</string>
    <string name="B2">Date Of Visit:</string>
    <string name="B3">Name Of School:</string>
    <string name="B4">School SEMIS Code:</string>
    <string name="B5">Is school functional?</string>
    <string name="B501">Yes</string>
    <string name="B502">Not functional but building there</string>
    <string name="B503">No school building and not functional</string>
    <string name="B504">No school building but functional</string>
    <string name="B51">Name Of Respondent</string>
    <string name="B52">What is the designation of respondent?</string>
    <string name="B6">Does school has its own building?</string>
    <string name="B601">Yes</string>
    <string name="B602">No</string>
    <string name="B603">Don’t know</string>
    <string name="B7">If no, where school activities are being run?</string>
    <string name="B701">In open sky without a building</string>
    <string name="B702">In a donated building/room</string>
    <string name="B703">Other (Specify)</string>
    <string name="B8">What type of school is this?</string>
    <string name="B801">Public</string>
    <string name="B802">Private</string>
    <string name="B803">Madrasa</string>
    <string name="B9">What level of school is this?</string>
    <string name="B901">Primary</string>
    <string name="B902">Middle</string>
    <string name="B903">Secondary</string>
    <string name="B904">Higher secondary</string>
    <string name="B10">Who attends this school?</string>
    <string name="B1001">Boys</string>
    <string name="B1002">Girls</string>
    <string name="istatus">Interview Status</string>
    <string name="istatusa">Complete</string>
    <string name="istatusb">Incomplete</string>
    <string name="istatus96"> Other </string>
    <string name="istatus96x"> Specify </string>
</resources>